<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/loanedBooksFragment"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bookListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_library_books"
        android:title="@string/books"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/addBookFragment"
        android:enabled="true"
        android:icon="@drawable/ic_library_add"
        android:title="@string/add_book"
        app:showAsAction="ifRoom" />

</menu>